# EcoLens

./: .env.docker  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CODEOWNERS.md  CODE_OF_CONDUCT.md  Contributing.md  Makefile  README.md  TODO.md  docker-compose copy.yml  infrastructure-proposal.md  plan.md  pyproject.toml  requirements.txt
app/: database.py  (+4 more)
services/data-pipeline/: TODO.md  cols.txt  hyperparameter_search.yml  pyproject.toml
services/data-pipeline/notebooks/: feature_validation_standalone.ipynb
services/data-pipeline/notebooks/feature_validation_output/: selected_features.json  selected_features.py  selected_features_mart_columns.sql
services/data-pipeline/scripts/: backfill_bom_historical.py  colab_server.py  plot_data_frequency.py  run_remote.py  setup.sh  sync_raw.py  test_fetch.py  test_fetch_live.py  test_mongo_connection.py  trigger_ingest_aemo_nem.py  trigger_ingest_aemo_wem.py  trigger_ingest_bom.py  trigger_ingest_holidays.py  trigger_ingest_openelectricity.py  validate_feature_columns.py
services/data-pipeline/src/ecolens/: config.py
services/data-pipeline/src/ecolens/api/: app.py
services/data-pipeline/src/ecolens/forecasting/: api.py  cli.py  data.py  features.py
services/data-pipeline/src/ecolens/forecasting/evaluation/: conformal.py  evaluate.py  metrics.py
services/data-pipeline/src/ecolens/forecasting/mlops/: drift.py  health.py  promote.py  registry.py
services/data-pipeline/src/ecolens/forecasting/models/: lstm.py
services/data-pipeline/src/ecolens/forecasting/serving/: forecast.py
services/data-pipeline/src/ecolens/forecasting/training/: colab_dispatch.py  incremental.py  losses.py  online.py  search_space.py  train.py  tune.py
services/data-pipeline/src/ecolens/ingestion/: INGESTION.md  api.py  circuit_breaker.py
services/data-pipeline/src/ecolens/ingestion/sources/aemo_nem/: __init__.py  client.py  engine.py  models.py  schema.py  transformers.py
services/data-pipeline/src/ecolens/ingestion/sources/aemo_wem/: __init__.py  client.py  engine.py  models.py  schema.py  transformers.py
services/data-pipeline/src/ecolens/ingestion/sources/bom/: __init__.py  cache.py  client.py  engine.py  historical.py  historical_client.py  historical_transformers.py  models.py  schema.py  transformers.py
services/data-pipeline/src/ecolens/ingestion/sources/holidays/: __init__.py  cache.py  client.py  engine.py  models.py  schema.py  transformers.py
services/data-pipeline/src/ecolens/ingestion/sources/openelectricity/: __init__.py  client.py  engine.py  models.py  schema.py  transformers.py
services/data-pipeline/src/ecolens/ingestion/storage/: duckdb_store.py  mongo.py  postgres.py  settings.py
services/data-pipeline/src/ecolens/ingestion/validators/: bom.py  common.py  holidays.py  openelectricity.py
services/data-pipeline/src/ecolens/shared/: job_tracker.py
services/data-pipeline/src/ecolens/shared/cache/: redis_client.py
services/data-pipeline/src/ecolens/shared/observability/: logging.py
services/data-pipeline/src/ecolens/warehouse/: werehouse.md
services/data-pipeline/src/ecolens/warehouse/api/: __init__.py  api.py  app.py  cache.py  db.py  dependencies.py  models.py  queries.py  routes.py  settings.py  validation.py
services/data-pipeline/src/ecolens/warehouse/dbt_project/: dbt_project.yml  profiles.yml
services/data-pipeline/src/ecolens/warehouse/dbt_project/macros/: create_raw_schema.sql  energy_columns.sql  time_helpers.sql
services/data-pipeline/src/ecolens/warehouse/dbt_project/models/marts/: _marts.yml  dim_holiday.sql  dim_region.sql  fact_demand_30min.sql  fact_generation_30min.sql  ml_features_demand_v1.sql  mv_daily_national_demand.sql  (+2 more)
services/data-pipeline/src/ecolens/warehouse/dbt_project/seeds/: region_reference.csv
services/data-pipeline/src/ecolens/warehouse/dbt_project/tests/: assert_uniform_interval_int_energy_filled_30min.sql  assert_unique_energy_grain.sql  assert_unique_fact_demand_grain.sql
services/data-pipeline/src/ecolens/warehouse/runner/: __init__.py  aggregates.py  archive.py  cli.py  dbt_runner.py  freshness.py  metrics.py  models.py  orchestrator.py  quality.py  runner.py  settings.py
services/data-pipeline/tests/: conftest.py  test_aemo_nem_client.py  test_aemo_nem_engine.py  test_aemo_nem_transformers.py  test_aemo_wem_client.py  test_aemo_wem_engine.py  test_aemo_wem_transformers.py  test_api_app.py  test_bom_cache.py  test_bom_client.py  test_bom_engine.py  test_bom_historical.py  test_bom_historical_client.py  test_bom_historical_transformers.py  test_bom_transformers.py  test_circuit_breaker.py  test_colab_dispatch.py  test_config.py  test_forecasting_api.py  test_forecasting_cli.py  test_forecasting_conformal.py  test_forecasting_data.py  test_forecasting_drift.py  test_forecasting_features.py  test_forecasting_incremental.py  test_forecasting_losses.py  test_forecasting_lstm.py  test_forecasting_metrics.py  test_forecasting_online.py  test_forecasting_registry.py  test_forecasting_search_space.py  test_forecasting_serving.py  test_forecasting_train.py  test_forecasting_tune.py  test_holidays_cache.py  test_holidays_client.py  test_holidays_engine.py  test_holidays_transformers.py  test_ingestion_api.py  test_ingestion_storage_duckdb.py  (+24 more)
services/forecast-api/: README.md  TODO.md  gunicorn_conf.py  pyproject.toml  strategy.md
services/forecast-api/scripts/: benchmark_inference.py
services/forecast-api/src/ecolens_forecast_api/: app.py  cache.py  db.py  dependencies.py  logging.py  main.py  metrics.py  models.py  queries.py  routes.py  settings.py  validation.py
services/forecast-api/src/ecolens_forecast_api/forecasting/: baseline.py  features.py  loader.py  lstm_forecast.py  model.py  optimize.py  reload.py
services/forecast-api/tests/: conftest.py  test_baseline.py  test_cache.py  test_db.py  test_forecasting_loader.py  test_forecasting_lstm_forecast.py  test_forecasting_model.py  test_forecasting_optimize.py  test_forecasting_reload.py  test_inference_features.py  test_metrics.py  test_queries.py  test_routes.py  test_settings.py  test_validation.py
(+129 files in other folders)
