[project]
name = "data-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "dbt-core>=1.8.0",
    "dbt-postgres>=1.8.0",
    "fastapi[standard]>=0.139.2",
    "httpx>=0.28.1",
    "mlflow-skinny>=2.18.0",
    "motor>=3.7.1",
    "numpy>=2.5.1",
    "optuna>=4.0.0",
    "pandas>=3.0.3",
    "pandera>=0.32.1",
    "pyarrow>=18.0.0",
    "psycopg2-binary>=2.9.9",
    "pymongo>=4.17.0",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "redis>=5.0.0",
    "respx>=0.23.1",
    "scipy>=1.14.0",
    "torch>=2.5.0",
]

[dependency-groups]
dev = [
    "mypy>=2.3.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.22",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ecolens"]
