[project]
name = "forecast-api"
version = "0.1.0"
description = "ecoLens forecast-api: low-latency demand forecast serving over the warehouse's ml_features_demand_v1 mart"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.139.2",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.7.0",
    "redis>=5.0.0",
    "uvicorn>=0.51.0",
]

[dependency-groups]
dev = [
    "mypy>=2.3.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.22",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ecolens_forecast_api"]
